[gd_scene load_steps=3 format=3 uid="uid://c1jklhqwulyns"]

[ext_resource type="Script" uid="uid://bf4hkwh0ocis7" path="res://scripts/color_switcher.gd" id="1_4ubo0"]
[ext_resource type="PackedScene" uid="uid://bj6rob1dcv0jd" path="res://scenes/palette.tscn" id="1_58d8y"]

[node name="ColorSwitcher" type="Control" node_paths=PackedStringArray("palette")]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_4ubo0")
palette = NodePath("Palette")

[node name="Palette" parent="." instance=ExtResource("1_58d8y")]
layout_mode = 0

[connection signal="color_changed" from="Palette" to="." method="_on_palette_color_changed"]
